// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalendarSection renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CalendarSection
    classes={
      Object {
        "container": "",
        "header": "",
        "paper": "",
        "text": "",
      }
    }
    section={
      Object {
        "course": "101-1",
        "event": Object {
          "dow": "Mo",
          "end": Object {
            "hour": 12,
            "minute": 0,
          },
          "start": Object {
            "hour": 10,
            "minute": 30,
          },
        },
        "id": "12345",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Section
          classes={
            Object {
              "container": "",
              "header": "",
              "paper": "",
              "text": "",
            }
          }
          leftHeaderContent="10:30 - 12:00"
          onClickFn={[Function]}
          rightHeaderContent="undefined undefined"
          sectionName=""
        />,
        <ForwardRef
          section={
            Object {
              "course": "101-1",
              "event": Object {
                "dow": "Mo",
                "end": Object {
                  "hour": 12,
                  "minute": 0,
                },
                "start": Object {
                  "hour": 10,
                  "minute": 30,
                },
              },
              "id": "12345",
            }
          }
          showDialog={false}
          toggleDialog={[Function]}
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "classes": Object {
            "container": "",
            "header": "",
            "paper": "",
            "text": "",
          },
          "leftHeaderContent": "10:30 - 12:00",
          "onClickFn": [Function],
          "rightHeaderContent": "undefined undefined",
          "sectionName": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "section": Object {
            "course": "101-1",
            "event": Object {
              "dow": "Mo",
              "end": Object {
                "hour": 12,
                "minute": 0,
              },
              "start": Object {
                "hour": 10,
                "minute": 30,
              },
            },
            "id": "12345",
          },
          "showDialog": false,
          "toggleDialog": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "Naked": [Function],
          "displayName": "WithStyles(ClassModal)",
          "options": Object {},
          "propTypes": Object {
            "classes": [Function],
            "innerRef": [Function],
          },
          "render": [Function],
          Symbol(Symbol.hasInstance): [Function],
        },
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Section
            classes={
              Object {
                "container": "",
                "header": "",
                "paper": "",
                "text": "",
              }
            }
            leftHeaderContent="10:30 - 12:00"
            onClickFn={[Function]}
            rightHeaderContent="undefined undefined"
            sectionName=""
          />,
          <ForwardRef
            section={
              Object {
                "course": "101-1",
                "event": Object {
                  "dow": "Mo",
                  "end": Object {
                    "hour": 12,
                    "minute": 0,
                  },
                  "start": Object {
                    "hour": 10,
                    "minute": 30,
                  },
                },
                "id": "12345",
              }
            }
            showDialog={false}
            toggleDialog={[Function]}
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "classes": Object {
              "container": "",
              "header": "",
              "paper": "",
              "text": "",
            },
            "leftHeaderContent": "10:30 - 12:00",
            "onClickFn": [Function],
            "rightHeaderContent": "undefined undefined",
            "sectionName": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "section": Object {
              "course": "101-1",
              "event": Object {
                "dow": "Mo",
                "end": Object {
                  "hour": 12,
                  "minute": 0,
                },
                "start": Object {
                  "hour": 10,
                  "minute": 30,
                },
              },
              "id": "12345",
            },
            "showDialog": false,
            "toggleDialog": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "Naked": [Function],
            "displayName": "WithStyles(ClassModal)",
            "options": Object {},
            "propTypes": Object {
              "classes": [Function],
              "innerRef": [Function],
            },
            "render": [Function],
            Symbol(Symbol.hasInstance): [Function],
          },
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`CalendarSection renders modal correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CalendarSection
    classes={
      Object {
        "container": "",
        "header": "",
        "paper": "",
        "text": "",
      }
    }
    section={
      Object {
        "course": "101-1",
        "event": Object {
          "dow": "Mo",
          "end": Object {
            "hour": 12,
            "minute": 0,
          },
          "start": Object {
            "hour": 10,
            "minute": 30,
          },
        },
        "id": "12345",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Section
          classes={
            Object {
              "container": "",
              "header": "",
              "paper": "",
              "text": "",
            }
          }
          leftHeaderContent="10:30 - 12:00"
          onClickFn={[Function]}
          rightHeaderContent="undefined undefined"
          sectionName=""
        />,
        <ForwardRef
          section={
            Object {
              "course": "101-1",
              "event": Object {
                "dow": "Mo",
                "end": Object {
                  "hour": 12,
                  "minute": 0,
                },
                "start": Object {
                  "hour": 10,
                  "minute": 30,
                },
              },
              "id": "12345",
            }
          }
          showDialog={true}
          toggleDialog={[Function]}
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "classes": Object {
            "container": "",
            "header": "",
            "paper": "",
            "text": "",
          },
          "leftHeaderContent": "10:30 - 12:00",
          "onClickFn": [Function],
          "rightHeaderContent": "undefined undefined",
          "sectionName": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "section": Object {
            "course": "101-1",
            "event": Object {
              "dow": "Mo",
              "end": Object {
                "hour": 12,
                "minute": 0,
              },
              "start": Object {
                "hour": 10,
                "minute": 30,
              },
            },
            "id": "12345",
          },
          "showDialog": true,
          "toggleDialog": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "Naked": [Function],
          "displayName": "WithStyles(ClassModal)",
          "options": Object {},
          "propTypes": Object {
            "classes": [Function],
            "innerRef": [Function],
          },
          "render": [Function],
          Symbol(Symbol.hasInstance): [Function],
        },
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Section
            classes={
              Object {
                "container": "",
                "header": "",
                "paper": "",
                "text": "",
              }
            }
            leftHeaderContent="10:30 - 12:00"
            onClickFn={[Function]}
            rightHeaderContent="undefined undefined"
            sectionName=""
          />,
          <ForwardRef
            section={
              Object {
                "course": "101-1",
                "event": Object {
                  "dow": "Mo",
                  "end": Object {
                    "hour": 12,
                    "minute": 0,
                  },
                  "start": Object {
                    "hour": 10,
                    "minute": 30,
                  },
                },
                "id": "12345",
              }
            }
            showDialog={true}
            toggleDialog={[Function]}
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "classes": Object {
              "container": "",
              "header": "",
              "paper": "",
              "text": "",
            },
            "leftHeaderContent": "10:30 - 12:00",
            "onClickFn": [Function],
            "rightHeaderContent": "undefined undefined",
            "sectionName": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "section": Object {
              "course": "101-1",
              "event": Object {
                "dow": "Mo",
                "end": Object {
                  "hour": 12,
                  "minute": 0,
                },
                "start": Object {
                  "hour": 10,
                  "minute": 30,
                },
              },
              "id": "12345",
            },
            "showDialog": true,
            "toggleDialog": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "Naked": [Function],
            "displayName": "WithStyles(ClassModal)",
            "options": Object {},
            "propTypes": Object {
              "classes": [Function],
              "innerRef": [Function],
            },
            "render": [Function],
            Symbol(Symbol.hasInstance): [Function],
          },
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
